# knowledge-routing-agent

./: .env.example  .gitignore  README.md  antigravity-implementation-brief.md  pyproject.toml  walkthrough.md
.github/workflows/: deploy-pages.yml
reports/: index.html
reports/runs/2026-03-27-engineer-meeting-for-cc-prototype/: index.html  output.json  source-map.json
reports/runs/2026-03-27-engineer-meeting-v2-prototype-features/: index.html  output.json  source-map.json
reports/runs/2026-04-20-chiayi-livestock-0420/: index.html  output.json  source-map.json
reports/runs/2026-05-04-illegal-excavation-ai/: index.html  output.json  source-map.json
reports/runs/2026-05-04-illegal-excavation-ai-work-items/: index.html  output.json  source-map.json
reports/runs/2026-07-01-project-phoenix-kickoff/: index.html  output.json  source-map.json
reports/runs/2026-07-02-injection-test/: index.html  output.json  (+1 more)
samples/: 2026-03-27-engineer-v2-prototype-features.md  2026-04-20-Chiayi_Livestock_Requirements_Interview_Minutes.md  2026-05-04-illegal-excavation-work-items.md  2026-07-01-planning.md  2026-07-02-injection-test.md  2026-07-03-vague-notes.md  2026-07-05-sa-contradiction.md  not-markdown.txt  oversized.md
scripts/: run_tests.sh
src/: agent.py
src/cli/: main.py
src/core/: decision_extractor.py  parser.py  report_builder.py  reviewer.py  role_router.py
src/prompts/: decision_extractor.md  engineer_router.md  pm_router.md  qa_router.md  reviewer.md  sa_router.md  stakeholder_router.md
src/schemas/: models.py
src/templates/: index.html  report.html
(+6 files in other folders)
