[project]
name = "knowledge-routing-agent"
version = "0.1.0"
description = "Transform messy meeting notes into source-grounded, role-specific knowledge artifacts"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
knowledge-route = "src.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
